--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<li class="nav-item active "><a href="index.html" class="nav-link pl-0">Accueil</a></li>
 	        	<li class="nav-item"><a href="ecole.html" class="nav-link">Ecole</a></li>
 	        	<li class="nav-item"><a href="teacher.html" class="nav-link">Pédagogie</a></li>
-	        	<li class="nav-item"><a href="courses.html" class="nav-link">Horaires</a></li>
+				<li class="nav-item"><a href="courses.html" class="nav-link">Horaires</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contacts</a></li>
 	        </ul>
 	      </div>
@@ -173,7 +173,7 @@
 							<div class="col-lg-6">
 								<div class="services-2 d-flex">
 									<div class="icon mt-2 mr-3 d-flex justify-content-center align-items-center">
-										<img src="images/2991600.svg" 
+										<img src="images/english.svg" 
 										alt="un triangle aux trois côtés égaux"
 										height="87px"
 										width="100px" /></div>
@@ -373,7 +373,7 @@
 					</div>
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
-							<div class="img-wrap d-flex align-items-stretch"><div class="img align-self-stretch" style="border-radius: 20px; background-image: url(images/pic6.jpg);"></div>
+							<div class="img-wrap d-flex align-items-stretch"><div class="img align-self-stretch" style="border-radius: 20px; background-image: url(images/music.jpg);"></div>
 							</div>
 							<div class="text pt-3 text-left">
 								<h3 style="color: #52b4e7">L’éveil musical</h3>
@@ -384,7 +384,7 @@
 					</div>
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
-							<div class="img-wrap d-flex align-items-stretch"><div class="img align-self-stretch" style="border-radius: 20px; background-image: url(images/pic8.jpg);"></div>
+							<div class="img-wrap d-flex align-items-stretch"><div class="img align-self-stretch" style="border-radius: 20px; background-image: url(images/artpl.jpg);"></div>
 							</div>
 							<div class="text pt-3 text-left">
 								<h3 style="color: #52b4e7">L’art plastique</h3>
@@ -406,7 +406,7 @@
 					</div>
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
-							<div class="img-wrap d-flex align-items-stretch"><div class="img align-self-stretch" style="border-radius: 20px; background-image: url(images/pic8.jpg);"></div>
+							<div class="img-wrap d-flex align-items-stretch"><div class="img align-self-stretch" style="border-radius: 20px; background-image: url(images/theatre.jpg);"></div>
 							</div>
 							<div class="text pt-3 text-left">
 								<h3 style="color: #52b4e7">Le Théâtre</h3>
@@ -417,7 +417,7 @@
 					</div>
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
-							<div class="img-wrap d-flex align-items-stretch"><div class="img align-self-stretch" style="border-radius: 20px; background-image: url(images/pic9.jpg);"></div>
+							<div class="img-wrap d-flex align-items-stretch"><div class="img align-self-stretch" style="border-radius: 20px; background-image: url(images/poterie.jpg);"></div>
 							</div>
 							<div class="text pt-3 text-left">
 								<h3 style="color: #52b4e7">La Poterie</h3>
