--- a/teacher.html
+++ b/teacher.html
@@ -83,7 +83,7 @@
 					</div>
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
-							<div class="img-wrap d-flex align-items-stretch"><div class="img align-self-stretch" style="border-radius: 20px; background-image: url(images/pic6.jpg);"></div>
+							<div class="img-wrap d-flex align-items-stretch"><div class="img align-self-stretch" style="border-radius: 20px; background-image: url(images/music.jpg);"></div>
 							</div>
 							<div class="text pt-3 text-left">
 								<h3 style="color: #52b4e7">L’éveil musical</h3>
@@ -94,7 +94,7 @@
 					</div>
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
-							<div class="img-wrap d-flex align-items-stretch"><div class="img align-self-stretch" style="border-radius: 20px; background-image: url(images/pic8.jpg);"></div>
+							<div class="img-wrap d-flex align-items-stretch"><div class="img align-self-stretch" style="border-radius: 20px; background-image: url(images/artpl.jpg);"></div>
 							</div>
 							<div class="text pt-3 text-left">
 								<h3 style="color: #52b4e7">L’art plastique</h3>
@@ -116,7 +116,7 @@
 					</div>
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
-							<div class="img-wrap d-flex align-items-stretch"><div class="img align-self-stretch" style="border-radius: 20px; background-image: url(images/pic8.jpg);"></div>
+							<div class="img-wrap d-flex align-items-stretch"><div class="img align-self-stretch" style="border-radius: 20px; background-image: url(images/theatre.jpg);"></div>
 							</div>
 							<div class="text pt-3 text-left">
 								<h3 style="color: #52b4e7">Le Théâtre</h3>
@@ -127,7 +127,7 @@
 					</div>
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
-							<div class="img-wrap d-flex align-items-stretch"><div class="img align-self-stretch" style="border-radius: 20px; background-image: url(images/pic9.jpg);"></div>
+							<div class="img-wrap d-flex align-items-stretch"><div class="img align-self-stretch" style="border-radius: 20px; background-image: url(images/poterie.jpg);"></div>
 							</div>
 							<div class="text pt-3 text-left">
 								<h3 style="color: #52b4e7">La Poterie</h3>
