--- a/ecole.html
+++ b/ecole.html
@@ -158,7 +158,7 @@
 							<div class="col-lg-6">
 								<div class="services-2 d-flex">
 									<div class="icon mt-2 mr-3 d-flex justify-content-center align-items-center">
-										<img src="images/2991600.svg" 
+										<img src="images/english.svg" 
 										alt="un triangle aux trois côtés égaux"
 										height="87px"
 										width="100px" /></div>
@@ -325,69 +325,69 @@
 
 	
 
-		<section class="ftco-gallery">
-			<div class="container-wrap">
-				<div class="row no-gutters">
-						<div class="col-md-3 ftco-animate">
-							<a href="images/pic1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic1.jpg);">
-								<div class="icon mb-4 d-flex align-items-center justify-content-center">
-								<span class="icon-instagram"></span>
-							</div>
-							</a>
-						</div>
-						<div class="col-md-3 ftco-animate">
-							<a href="images/pic2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic6.jpg);">
-								<div class="icon mb-4 d-flex align-items-center justify-content-center">
-								<span class="icon-instagram"></span>
-							</div>
-							</a>
-						</div>
-						<div class="col-md-3 ftco-animate">
-							<a href="images/pic3.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic3.jpg);">
-								<div class="icon mb-4 d-flex align-items-center justify-content-center">
-								<span class="icon-instagram"></span>
-							</div>
-							</a>
-						</div>
-						<div class="col-md-3 ftco-animate">
-							<a href="images/pic4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic4.jpg);">
-								<div class="icon mb-4 d-flex align-items-center justify-content-center">
-								<span class="icon-instagram"></span>
-							</div>
-							</a>
-						</div>
-						<div class="col-md-3 ftco-animate">
-							<a href="images/pic5.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic5.jpg);">
-								<div class="icon mb-4 d-flex align-items-center justify-content-center">
-								<span class="icon-instagram"></span>
-							</div>
-							</a>
-						</div>
-						<div class="col-md-3 ftco-animate">
-							<a href="images/pic5.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic9.jpg);">
-								<div class="icon mb-4 d-flex align-items-center justify-content-center">
-								<span class="icon-instagram"></span>
-							</div>
-							</a>
-						</div>
-						
-						<div class="col-md-3 ftco-animate">
-							<a href="images/pic5.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic8.jpg);">
-								<div class="icon mb-4 d-flex align-items-center justify-content-center">
-								<span class="icon-instagram"></span>
-							</div>
-							</a>
-						</div>
-						<div class="col-md-3 ftco-animate">
-							<a href="images/pic6.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic6.jpg);">
-								<div class="icon mb-4 d-flex align-items-center justify-content-center">
-								<span class="icon-instagram"></span>
-							</div>
-							</a>
-						</div>
-			</div>
-			</div>
-		</section>
+	<section class="ftco-gallery">
+    	<div class="container-wrap">
+    		<div class="row no-gutters">
+					<div class="col-md-3 ftco-animate">
+						<a href="images/pic1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic1.jpg);">
+							<div class="icon mb-4 d-flex align-items-center justify-content-center">
+    						<span class="icon-instagram"></span>
+    					</div>
+						</a>
+					</div>
+					<div class="col-md-3 ftco-animate">
+						<a href="images/pic10.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic10.jpg);">
+							<div class="icon mb-4 d-flex align-items-center justify-content-center">
+    						<span class="icon-instagram"></span>
+    					</div>
+						</a>
+					</div>
+					<div class="col-md-3 ftco-animate">
+						<a href="images/pic3.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic3.jpg);">
+							<div class="icon mb-4 d-flex align-items-center justify-content-center">
+    						<span class="icon-instagram"></span>
+    					</div>
+						</a>
+					</div>
+					<div class="col-md-3 ftco-animate">
+						<a href="images/pic4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic4.jpg);">
+							<div class="icon mb-4 d-flex align-items-center justify-content-center">
+    						<span class="icon-instagram"></span>
+    					</div>
+						</a>
+					</div>
+					<div class="col-md-3 ftco-animate">
+						<a href="images/pic5.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic5.jpg);">
+							<div class="icon mb-4 d-flex align-items-center justify-content-center">
+    						<span class="icon-instagram"></span>
+    					</div>
+						</a>
+					</div>
+					<div class="col-md-3 ftco-animate">
+						<a href="images/pic9.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic9.jpg);">
+							<div class="icon mb-4 d-flex align-items-center justify-content-center">
+    						<span class="icon-instagram"></span>
+    					</div>
+						</a>
+					</div>
+					
+					<div class="col-md-3 ftco-animate">
+						<a href="images/pic8.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic8.jpg);">
+							<div class="icon mb-4 d-flex align-items-center justify-content-center">
+    						<span class="icon-instagram"></span>
+    					</div>
+						</a>
+					</div>
+					<div class="col-md-3 ftco-animate">
+						<a href="images/pic6.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic6.jpg);">
+							<div class="icon mb-4 d-flex align-items-center justify-content-center">
+    						<span class="icon-instagram"></span>
+    					</div>
+						</a>
+					</div>
+        </div>
+    	</div>
+    </section>
 
 		
 	<footer class="ftco-footer ftco-bg-dark ftco-section">
