--- a/ecole.html
+++ b/ecole.html
@@ -37,7 +37,7 @@
 	        	<li class="nav-item active"><a href="ecole.html" class="nav-link">Ecole</a></li>
 	        	<li class="nav-item"><a href="teacher.html" class="nav-link">Pédagogie</a></li>
 	        	<li class="nav-item"><a href="courses.html" class="nav-link">Horaires</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contacts</a></li>
+	          <li class="nav-item"><a href="contact.html" class="nav-link">Inscription</a></li>
 	        </ul>
 	      </div>
 	    </div>
