--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
 						</div>
 						<div class="d-md-flex">
 		    				<div class="form-group center">								
-								<input mail value="Valider" type="submit" class="col-md-6 btn btn-secondary py-3 px-4">
+								<a href="mailto:customer@email.com?subject=Pre Insicription&body=hi" value="Valider" type="submit" class="col-md-6 btn btn-secondary py-3 px-4" style="color:white">Valider</a>
 		    				</div>
 						</div>
 						
