--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,8 @@
 	        	<li class="nav-item "><a href="about.html" class="nav-link">Ecole</a></li>
 	        	<li class="nav-item"><a href="teacher.html" class="nav-link">Pédagogie</a></li>
 	        	<li class="nav-item"><a href="courses.html" class="nav-link">Horaires</a></li>
-	          <li class="nav-item active"><a href="contact.html" class="nav-link">Inscription</a></li>
+            <li class="nav-item active"><a href="contact.html" class="nav-link">Inscription</a></li>
+            <li class="nav-item"><a href="album.html" class="nav-link">Album</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -59,28 +60,22 @@
     <section class="ftco-section contact-section">
       <div class="container">
         <div class="row d-flex mb-5 contact-info">
-          <div class="col-md-3 d-flex">
+          <div class="col-md-4 d-flex">
           	<div class="bg-light align-self-stretch box p-4 text-center">
-          		<h3 class="mb-4">Address</h3>
-	            <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+          		<h3 class="mb-4">Adresse</h3>
+	            <p>Magasin rdc lotissement Alia N°19 El Jadida, Maroc.</p>
 	          </div>
           </div>
-          <div class="col-md-3 d-flex">
+          <div class="col-md-4 d-flex">
           	<div class="bg-light align-self-stretch box p-4 text-center">
-          		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://1234567920">+ 1235 2355 98</a></p>
+          		<h3 class="mb-4">Télephone</h3>
+	            <p><a href="tel://1234567920">0644705893</a></p>
 	          </div>
           </div>
-          <div class="col-md-3 d-flex">
+          <div class="col-md-4 d-flex">
           	<div class="bg-light align-self-stretch box p-4 text-center">
-          		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
-	          </div>
-          </div>
-          <div class="col-md-3 d-flex">
-          	<div class="bg-light align-self-stretch box p-4 text-center">
-          		<h3 class="mb-4">Website</h3>
-	            <p><a href="#">yoursite.com</a></p>
+          		<h3 class="mb-4">Email</h3>
+	            <p><a href="mailto:info@yoursite.com">info@lafontainebleue.ma</a></p>
 	          </div>
           </div>
         </div>
@@ -177,22 +172,23 @@
             	<h2 class="ftco-heading-2">Des questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Magasin rdc lotissement Alia N°19 El Jadida, Maroc.</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">0644705893</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@lafontainebleue.ma</span></a></li>
 	              </ul>
 	            </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="ftco-footer-widget mb-5 ml-md-4">
-              <h2 class="ftco-heading-2">Links</h2>
+              <h2 class="ftco-heading-2">info@lafontainebleue.ma</h2>
               <ul class="list-unstyled">
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Accueil</a></li>
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Ecole</a></li>
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Pédagogie</a></li>
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Horaires</a></li>
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Contacts</a></li>
+                <li><a href="index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Accueil</a></li>
+                <li><a href="ecole.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Ecole</a></li>
+                <li><a href="teacher.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Pédagogie</a></li>
+                <li><a href="courses.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Horaires</a></li>
+				        <li><a href="contact.htm"><span class="ion-ios-arrow-round-forward mr-2"></span>Contacts</a></li>
+				        <li><a href="album.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Album</a></li>
               </ul>
             </div>
           </div>
