--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 	        	<li class="nav-item"><a href="ecole.html" class="nav-link">Ecole</a></li>
 	        	<li class="nav-item"><a href="teacher.html" class="nav-link">Pédagogie</a></li>
 				<li class="nav-item"><a href="courses.html" class="nav-link">Horaires</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Inscription</a></li>
+			  <li class="nav-item"><a href="contact.html" class="nav-link">Inscription</a></li>
+			  <li class="nav-item"><a href="album.html" class="nav-link">Album</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -656,73 +657,8 @@
     	</div>
     </section>-->
 
-		<section class="ftco-section bg-light">
-			
-		</section>
 
-		<section class="ftco-gallery">
-    	<div class="container-wrap">
-    		<div class="row no-gutters">
-					<div class="col-md-3 ftco-animate">
-						<a href="images/pic1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic1.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
-					</div>
-					<div class="col-md-3 ftco-animate">
-						<a href="images/pic10.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic10.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
-					</div>
-					<div class="col-md-3 ftco-animate">
-						<a href="images/pic3.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic3.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
-					</div>
-					<div class="col-md-3 ftco-animate">
-						<a href="images/pic4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic4.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
-					</div>
-					<div class="col-md-3 ftco-animate">
-						<a href="images/pic5.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic5.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
-					</div>
-					<div class="col-md-3 ftco-animate">
-						<a href="images/pic9.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic9.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
-					</div>
-					
-					<div class="col-md-3 ftco-animate">
-						<a href="images/pic8.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic8.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
-					</div>
-					<div class="col-md-3 ftco-animate">
-						<a href="images/pic6.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pic6.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
-					</div>
-        </div>
-    	</div>
-    </section>
+
 
 		
     <footer class="ftco-footer ftco-bg-dark ftco-section">
@@ -733,22 +669,23 @@
             	<h2 class="ftco-heading-2">Des questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Magasin rdc lotissement Alia N°19 El Jadida, Maroc.</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">0644705893 </span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@lafontainebleue.ma</span></a></li>
 	              </ul>
 	            </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="ftco-footer-widget mb-5 ml-md-4">
-              <h2 class="ftco-heading-2">Links</h2>
+              <h2 class="ftco-heading-2">Liens</h2>
               <ul class="list-unstyled">
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Accueil</a></li>
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Ecole</a></li>
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Pédagogie</a></li>
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Horaires</a></li>
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Contacts</a></li>
+                <li><a href="index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Accueil</a></li>
+                <li><a href="ecole.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Ecole</a></li>
+                <li><a href="teacher.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Pédagogie</a></li>
+                <li><a href="courses.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Horaires</a></li>
+				<li><a href="contact.htm"><span class="ion-ios-arrow-round-forward mr-2"></span>Contacts</a></li>
+				<li><a href="album.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Album</a></li>
               </ul>
             </div>
           </div>
