--- a/album.html
+++ b/album.html
@@ -46,7 +46,7 @@
 	</nav>
     <!-- END nav -->
     
-	<section class="home-slider owl-carousel">
+	<section class="home-slider owl-carousel" style="touch-action: auto; -ms-touch-action: auto;">
 		<div href="images/pic1.jpg" class="slider-item image-popup img d-flex align-items-center" style="background-image:url(images/pic1.jpg);">	
 		  <div class="container">
 			<div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
