--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 	</nav>
     <!-- END nav -->
     
-    <section class="home-slider owl-carousel">
-      <div class="slider-item" style="background-image:url(images/pic6.jpg);">
+    <section class="home-slider owl-carousel"  style="touch-action: auto; -ms-touch-action: auto;">
+		<div href="images/pic6.jpg" class="slider-item image-popup img d-flex align-items-center" style="background-image:url(images/pic6.jpg);">	
       	<div class="overlay"></div>
         <div class="container">
           <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
@@ -59,17 +59,102 @@
         </div>
       </div>
 
-      <div class="slider-item" style="background-image:url(images/pic3.jpg);">
-      	<div class="overlay"></div>
+      <div href="images/pic3.jpg" class="slider-item image-popup img d-flex align-items-center" style="background-image:url(images/pic3.jpg);">	
         <div class="container">
           <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
           <div class="col-md-8 text-center ftco-animate">
-            <h1 class="mb-4">Découvrons le monde <span>ensemble</span></h1>
             <!--<p><a href="#" class="btn btn-secondary px-4 py-3 mt-3">Read More</a></p>-->
           </div>
         </div>
         </div>
-      </div>
+	  </div>
+	  <div href="images/pic1.jpg" class="slider-item image-popup img d-flex align-items-center" style="background-image:url(images/pic1.jpg);">	
+		<div class="container">
+		  <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
+		  <div class="col-md-8 text-center ftco-animate">
+			<!--<p><a href="#" class="btn btn-secondary px-4 py-3 mt-3">Read More</a></p>-->
+		  </div>
+		</div>
+		</div>
+	  </div>
+	  <div href="images/pic11.jpg" class="slider-item image-popup img d-flex align-items-center" style="background-image:url(images/pic11.jpg);">	
+		<div class="container">
+		  <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
+		  <div class="col-md-8 text-center ftco-animate">
+			<!--<p><a href="#" class="btn btn-secondary px-4 py-3 mt-3">Read More</a></p>-->
+		  </div>
+		</div>
+		</div>
+	  </div>
+	  
+	  <div href="images/pic4.jpg" class="slider-item image-popup img d-flex align-items-center" style="background-image:url(images/pic4.jpg);">	
+		<div class="container">
+		  <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
+		  <div class="col-md-8 text-center ftco-animate">
+			<!--<p><a href="#" class="btn btn-secondary px-4 py-3 mt-3">Read More</a></p>-->
+		  </div>
+		</div>
+		</div>
+	  </div>
+	  
+	  <div href="images/pic5.jpg" class="slider-item image-popup img d-flex align-items-center" style="background-image:url(images/pic5.jpg);">	
+		<div class="container">
+		  <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
+		  <div class="col-md-8 text-center ftco-animate">
+			<!--<p><a href="#" class="btn btn-secondary px-4 py-3 mt-3">Read More</a></p>-->
+		  </div>
+		</div>
+		</div>
+	  </div>
+	  <div href="images/pic6.jpg" class="slider-item image-popup img d-flex align-items-center" style="background-image:url(images/pic6.jpg);">	
+		<div class="container">
+		  <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
+		  <div class="col-md-8 text-center ftco-animate">
+			<!--<p><a href="#" class="btn btn-secondary px-4 py-3 mt-3">Read More</a></p>-->
+		  </div>
+		</div>
+		</div>
+	  </div>
+	  
+	  <div href="images/pic7.jpg" class="slider-item image-popup img d-flex align-items-center" style="background-image:url(images/pic7.jpg);">	
+		<div class="container">
+		  <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
+		  <div class="col-md-8 text-center ftco-animate">
+			<!--<p><a href="#" class="btn btn-secondary px-4 py-3 mt-3">Read More</a></p>-->
+		  </div>
+		</div>
+		</div>
+	  </div>
+	  
+	  <div href="images/pic8.jpg" class="slider-item image-popup img d-flex align-items-center" style="background-image:url(images/pic8.jpg);">	
+		<div class="container">
+		  <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
+		  <div class="col-md-8 text-center ftco-animate">
+			<!--<p><a href="#" class="btn btn-secondary px-4 py-3 mt-3">Read More</a></p>-->
+		  </div>
+		</div>
+		</div>
+	  </div>
+
+	  <div href="images/pic9.jpg" class="slider-item image-popup img d-flex align-items-center" style="background-image:url(images/pic9.jpg);">	
+		<div class="container">
+		  <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
+		  <div class="col-md-8 text-center ftco-animate">
+			<!--<p><a href="#" class="btn btn-secondary px-4 py-3 mt-3">Read More</a></p>-->
+		  </div>
+		</div>
+		</div>
+	  </div>
+	  
+		  <div href="images/pic10.jpg" class="slider-item image-popup img d-flex align-items-center" style="background-image:url(images/pic10.jpg);">	
+			<div class="container">
+			  <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
+			  <div class="col-md-8 text-center ftco-animate">
+				<!--<p><a href="#" class="btn btn-secondary px-4 py-3 mt-3">Read More</a></p>-->
+			  </div>
+			</div>
+			</div>
+		  </div>
     </section>
 
    <!--<section class="ftco-services ftco-no-pb">
