--- a/about.html
+++ b/about.html
@@ -464,7 +464,7 @@
                 <li><a href="teacher.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Pédagogie</a></li>
                 <li><a href="courses.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Horaires</a></li>
 				<li><a href="contact.htm"><span class="ion-ios-arrow-round-forward mr-2"></span>Contacts</a></li>
-				<li><a href="album.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Album</a></li>
+					 <!-- <li class="nav-item"><a href="album.html" class="nav-link">Album</a></li>-->
               </ul>
             </div>
           </div>
