--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 	        	<li class="nav-item"><a href="teacher.html" class="nav-link">Pédagogie</a></li>
 	        	<li class="nav-item"><a href="courses.html" class="nav-link">Horaires</a></li>
             <li class="nav-item active"><a href="contact.html" class="nav-link">Inscription</a></li>
-            <li class="nav-item"><a href="album.html" class="nav-link">Album</a></li>
+             <!-- <li class="nav-item"><a href="album.html" class="nav-link">Album</a></li>-->
 	        </ul>
 	      </div>
 	    </div>
@@ -188,7 +188,7 @@
                 <li><a href="teacher.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Pédagogie</a></li>
                 <li><a href="courses.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Horaires</a></li>
 				        <li><a href="contact.htm"><span class="ion-ios-arrow-round-forward mr-2"></span>Contacts</a></li>
-				        <li><a href="album.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Album</a></li>
+				        	 <!-- <li class="nav-item"><a href="album.html" class="nav-link">Album</a></li>-->
               </ul>
             </div>
           </div>
