--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	        	<li class="nav-item"><a href="teacher.html" class="nav-link">Pédagogie</a></li>
 				<li class="nav-item"><a href="courses.html" class="nav-link">Horaires</a></li>
 			  <li class="nav-item"><a href="contact.html" class="nav-link">Inscription</a></li>
-			  <li class="nav-item"><a href="album.html" class="nav-link">Album</a></li>
+			 <!-- <li class="nav-item"><a href="album.html" class="nav-link">Album</a></li>-->
 	        </ul>
 	      </div>
 	    </div>
