--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	</nav>
     <!-- END nav -->
     
-    <section class="home-slider owl-carousel"  style="touch-action: auto; -ms-touch-action: auto;">
+    <section class="home-slider owl-carousel"  style="touch-action: pan-y;">
 		<div href="images/pic6.jpg" class="slider-item image-popup img d-flex align-items-center" style="background-image:url(images/pic6.jpg);">	
       	<div class="overlay"></div>
         <div class="container">
