--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 	</nav>
     <!-- END nav -->
     
-    <section class="home-slider owl-carousel"  style="touch-action: pan-y;">
+    <section class="home-slider owl-carousel"  style="touch-action: pan-y !important;">
 		<div href="images/pic6.jpg" class="slider-item image-popup img d-flex align-items-center" style="background-image:url(images/pic6.jpg);">	
-      	<div class="overlay"></div>
+      	<div class="overlay" style="touch-action: pan-y !important;"></div>
         <div class="container">
           <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
           <div class="col-md-8 text-center ftco-animate">
