changes with css, images and other stuff

--- a/teacher.html
+++ b/teacher.html
@@ -127,7 +127,7 @@
 									<p>pour l'épanouissement des enfants afin de développer les expressions verbales et physiques ; découvrir de sa propre palette d'émotions avec laquelle il va donner vie aux différents personnages réalisés par nos animateurs.</p>
 							
 							</div>
-							<div class="img-wrap d-flex align-items-stretch"><div class="img align-self-stretch" style="border-radius: 20px; background-image: url(images/theatre.jpg);"></div>
+							<div class="img-wrap d-flex align-items-stretch"><div class="img align-self-stretch" style="border-radius: 20px; background-image: url(images/theatre1.jpg);"></div>
 							</div>
 						</div>
 					</div>
