--- a/ecole.html
+++ b/ecole.html
@@ -171,7 +171,7 @@
 							</div>
 							<div class="col-lg-6">
 								<div class="services-2 d-flex">
-									<div class="icon mt-2 mr-3 d-flex justify-content-center align-items-center"><img src="images/1839197.svg" 
+									<div class="icon mt-2 mr-3 d-flex justify-content-center align-items-center"><img src="images/paint.svg" 
 										alt="un triangle aux trois côtés égaux"
 										height="87px"
 										width="100px" /></div>
