--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 							</div>
 							<div class="col-lg-6">
 								<div class="services-2 d-flex">
-									<div class="icon mt-2 mr-3 d-flex justify-content-center align-items-center"><img src="images/1839197.svg" 
+									<div class="icon mt-2 mr-3 d-flex justify-content-center align-items-center"><img src="images/paint.svg" 
 										alt="un triangle aux trois côtés égaux"
 										height="87px"
 										width="100px" /></div>
@@ -501,7 +501,7 @@
 									<p>pour l'épanouissement des enfants afin de développer les expressions verbales et physiques ; découvrir de sa propre palette d'émotions avec laquelle il va donner vie aux différents personnages réalisés par nos animateurs.</p>
 							
 							</div>
-							<div class="img-wrap d-flex align-items-stretch"><div class="img align-self-stretch" style="border-radius: 20px; background-image: url(images/theatre.jpg);"></div>
+							<div class="img-wrap d-flex align-items-stretch"><div class="img align-self-stretch" style="border-radius: 20px; background-image: url(images/theatre1.jpg);"></div>
 							</div>
 						</div>
 					</div>
